Bug 291640 - Horizontal scrollbar in Dolphin may hide bottom row of icons.
Summary: Horizontal scrollbar in Dolphin may hide bottom row of icons.
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: compact mode (other bugs)
Version First Reported In: 2.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-16 09:24 UTC by Geert Lamers
Modified: 2012-02-07 16:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
Icons hidden behind status bar. (11.69 KB, image/png)
2012-01-16 09:48 UTC, Geert Lamers
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Geert Lamers 2012-01-16 09:24:27 UTC
Version:           2.0 (using Devel) 
OS:                Linux

When using Dolphin 2.0 with "Compact mode" and "Show in groups" enabled, the bottom row of icons is (partially) covered by the horizontal scroll bar.

Reproducible: Always

Steps to Reproduce:
1. Open a directory with many files or subdirectories (such that Dolphin shows more than 1 column and a scrollbar in compact mode).
2. Enable compact mode.
3. Enable show in groups.

Actual Results:  
As the group header appears, all icons slide down by the same amount of pixels, the bottom row partially hiding behind the horizontal scroll bar.

Expected Results:  
As the group header appears, either the vertical icons spacing is reduced, or the bottom icons shift into the next column, so all icons remain visible.
Comment 1 Geert Lamers 2012-01-16 09:47:30 UTC
I've just noticed that when there is no scrollbar, icons are still hidden behind the status bar.
Comment 2 Geert Lamers 2012-01-16 09:48:14 UTC
Created attachment 67880 [details]
Icons hidden behind status bar.

Icons being hidden behind the status bar. This is compact view with grouping enabled.
Comment 3 Frank Reininghaus 2012-01-18 22:36:09 UTC
Thanks for the bug report! I can confirm this issue.
Comment 4 Peter Penz 2012-02-07 16:18:25 UTC
Git commit 44b8e12e54f53a687ece168baa97801b37ec09bb by Peter Penz.
Committed on 07/02/2012 at 17:16.
Pushed by ppenz into branch 'KDE/4.8'.

Compact view: Don't hide items at the bottom when grouping is turned on

When grouping has been turned on, it was possible that items aligned
at the bottom have been hidden.
FIXED-IN: 4.8.1

M  +11   -2    dolphin/src/kitemviews/kitemlistviewlayouter.cpp

http://commits.kde.org/kde-baseapps/44b8e12e54f53a687ece168baa97801b37ec09bb
Comment 5 Peter Penz 2012-02-07 16:19:14 UTC
Git commit 691190f0d9927336ddd778eab5249a100eba5825 by Peter Penz.
Committed on 07/02/2012 at 17:16.
Pushed by ppenz into branch 'master'.

Compact view: Don't hide items at the bottom when grouping is turned on

When grouping has been turned on, it was possible that items aligned
at the bottom have been hidden.
FIXED-IN: 4.8.1

M  +11   -2    dolphin/src/kitemviews/kitemlistviewlayouter.cpp

http://commits.kde.org/kde-baseapps/691190f0d9927336ddd778eab5249a100eba5825