Compact view: Don't hide items at the bottom when grouping is turned on

When grouping has been turned on, it was possible that items aligned
at the bottom have been hidden.

BUG: 291640
FIXED-IN: 4.8.1